@@ -16,9 +16,9 @@ import static org.openhab.binding.kaleidescape.internal.KaleidescapeBindingConst
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
@@ -113,6 +113,10 @@ public class KaleidescapeHandler extends BaseThingHandler implements Kaleidescap
         thing.setProperty(name, value);
     }
 
+    protected boolean isChannelLinked(String channel) {
+        return isLinked(channel);
+    }
+
     @Override
     public void initialize() {
         final String uid = this.getThing().getUID().getAsString();
@@ -185,7 +189,7 @@ public class KaleidescapeHandler extends BaseThingHandler implements Kaleidescap
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(KaleidescapeThingActions.class);
+        return List.of(KaleidescapeThingActions.class);
     }
 
     public void handleRawCommand(@Nullable String command) {
@@ -225,8 +229,8 @@ public class KaleidescapeHandler extends BaseThingHandler implements Kaleidescap
                         }
                         break;
                     case VOLUME:
-                        if (command instanceof PercentType) {
-                            this.volume = (int) ((PercentType) command).doubleValue();
+                        if (command instanceof PercentType percentCommand) {
+                            this.volume = (int) percentCommand.doubleValue();
                             logger.debug("Got volume command {}", this.volume);
                             connector.sendCommand(SEND_EVENT_VOLUME_LEVEL_EQ + this.volume);
                         }
@@ -420,7 +424,7 @@ public class KaleidescapeHandler extends BaseThingHandler implements Kaleidescap
                     // if the last successful polling update was more than 1.25 intervals ago,
                     // the component is not responding even though the connection is still good
                     if ((System.currentTimeMillis() - lastEventReceived) > (POLLING_INTERVAL_S * 1.25 * 1000)) {
-                        logger.warn("Component not responding to status requests");
+                        logger.debug("Component not responding to status requests");
                         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
                                 "Component not responding to status requests");
                         closeConnection();
